added some card loading and client/server comms